test/corpus/testsuite.txt
================================================================================
Word bounds are respected
================================================================================
Error HelloError
--------------------------------------------------------------------------------

(log_file
  (log_level
    (error))
  (word))

================================================================================
Optional parenthesis support
================================================================================

Error (Error) bad_Error (other) (Debug) foo(www bla(Error)bla
--------------------------------------------------------------------------------

(log_file
  (log_level
    (error))
  (log_level
    (error))
  (word)
  (word)
  (log_level
    (debug))
  (word)
  (word)
  (word)
  (log_level
    (error))
  (word))

================================================================================
Optional bracket support
================================================================================

Error [Error] bad_Error [other] [Debug] foo[www bla[Error]bla
--------------------------------------------------------------------------------

(log_file
  (log_level
    (error))
  (log_level
    (error))
  (word)
  (word)
  (log_level
    (debug))
  (word)
  (word)
  (word)
  (log_level
    (error))
  (word))

================================================================================
Integers are detected
================================================================================

Error 112 [112] (112)
--------------------------------------------------------------------------------

(log_file
  (log_level
    (error))
  (number)
  (number)
  (number))

================================================================================
Hexdigits with separator (ex IPv6)
================================================================================

Debug fe80::42:3eff:fe2c:972a d6ffc984-d323-11ec-9d64-0242ac120002
--------------------------------------------------------------------------------

(log_file
  (log_level
    (debug))
  (word)
  (number))

================================================================================
Hexdigits without separator
================================================================================

Debug d6ffc984d32311ec9d640242ac120002
--------------------------------------------------------------------------------

(log_file
  (log_level
    (debug))
  (number))

================================================================================
IPv4
================================================================================

Debug 127.0.0.1 127.0.0.1:8000 (127.0.0.1:8000)
--------------------------------------------------------------------------------

(log_file
  (log_level
    (debug))
  (number)
  (number)
  (number))

================================================================================
Raw and interpreted string literal
================================================================================

DEBUG Username was Some("username") "clasic string literal" foo "key:\"escaped string\"other_thing"
--------------------------------------------------------------------------------

(log_file
  (log_level
    (debug))
  (word)
  (word)
  (word)
  (string_literal)
  (string_literal)
  (word)
  (string_literal))

================================================================================
Raw and interpreted string literal 2
================================================================================

"lorem ipsum"
'lorem ipsum'
['b','a']
["don't","won't"]


Don't highlight the wrong 'string'.
--------------------------------------------------------------------------------

(log_file
  (string_literal)
  (string_literal)
  (string_literal)
  (string_literal)
  (string_literal)
  (string_literal)
  (word)
  (word)
  (word)
  (word)
  (string_literal))

================================================================================
Git hashes
================================================================================

Commit: 6b1a8c9bf7a9f4a190bb08226ea376a11e9bdef8 [6b1a8c9]
Parents: 8d3639a482
--------------------------------------------------------------------------------

(log_file
  (word)
  (number)
  (number)
  (word)
  (number))

================================================================================
MAC addresses (hex number sequences separated by colon or dash (':', '-')
================================================================================

43:A4:19:A5:AF:C0
43-A4-19-A5-AF-C0
fde8:e767:269c:0:9425:3477:7c8f:7f1a
fde8-e767-269c-0-9425-3477-7c8f-7f1a
--------------------------------------------------------------------------------

(log_file
  (number)
  (number)
  (number)
  (number))


================================================================================
Date and time.
================================================================================

2015-12-09
2015-12-09 09:29
2015-12-09 09:29:02,258
12/09/2016
12.09.2016
12-09-2016
12-09-2015 09:29
12-09-2015 09:29:02,258
2017-01-11T15:26:11.803Z
2017-01-11T15:26:11.803+01:00
2017-01-11T15:26:11.803333+01:00
2017-02-09 23:28:37.785 +01:00
09:29
09:29:02
09:29:02,258
--------------------------------------------------------------------------------

(log_file
  (date
    (year_month_day))
  (date
    (year_month_day))
  (date
    (time))
  (date
    (year_month_day))
  (date
    (time))
  (date
    (year_month_day))
  (date
    (year_month_day))
  (date
    (year_month_day))
  (date
    (year_month_day))
  (date
    (time))
  (date
    (year_month_day))
  (date
    (time))
  (date
    (year_month_day))
  (date
    (time))
  (date
    (year_month_day))
  (date
    (time))
  (date
    (year_month_day))
  (date
    (time))
  (date
    (year_month_day))
  (date
    (time))
  (date
    (time))
  (date
    (time))
  (date
    (time)))

================================================================================
Single letter must not be detected as hexdigit
================================================================================

a b c d e f A B C D E F
--------------------------------------------------------------------------------

(log_file
  (word)
  (word)
  (word)
  (word)
  (word)
  (word)
  (word)
  (word)
  (word)
  (word)
  (word)
  (word))

================================================================================
The maj T problem
================================================================================

A log with T currently contains error.
--------------------------------------------------------------------------------

(log_file
  (word))

